--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img class="portrait" src="img/ich.png">
         </div>
         <div class="intro-text mdl-cell mdl-cell--8-col">
-          <h1>Bahuma - Max&nbsp;Bachhuber</h1>
+          <h1>Max&nbsp;Bachhuber</h1>
           <h3>Full-Stack Webentwickler.</h3>
           <p>Ich habe mich auf moderne App- und Webentwicklung spezialisiert und in diesem Bereich auch schon viele Projekte realisiert.</p>
 
