--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               Eine Soundboard-App mit Material Design und Echtzeit-Synchronisierung.
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a href="https://bahuma.io/sb" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur App</a>
+              <a href="https://soundboard.bahuma.io" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur App</a>
             </div>
           </div>
 
