--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Pinterest verify -->
     <meta name="p:domain_verify" content="160395556e4ddb17721c8b5da726fa96"/>
+    
+    <!-- Flattr verify -->
+    <meta name="flattr:id" content="m1xjz6">
 
     <script src="./bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
