Add praxis hradetzky and fix title alignment

--- a/index.html
+++ b/index.html
@@ -106,12 +106,27 @@
         <div class="referenzen-container mdl-grid">
           <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
+              <img src="./img/projekte/hradetzky.png" alt="Hradetzky" border="0">
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">praxis-hradetzky.de</h2>
+            </div>
+            <div class="mdl-card__supporting-text mdl-card--expand">
+              Website der Zahnarztpraxis Dres. Hradetzky
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a href="https://www.praxis-hradetzky.de/" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur Website</a>
+            </div>
+          </div>
+
+          <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
+            <div class="mdl-card__media">
               <img src="./img/projekte/zoomout.png" alt="Zoomout" border="0">
             </div>
-            <div class="mdl-card__title mdl-card--expand">
+            <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">zoomout-official.com</h2>
             </div>
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text mdl-card--expand">
               Website einer Band mit Design angelehnt an ein Album-Cover.
             </div>
             <div class="mdl-card__actions mdl-card--border">
@@ -123,10 +138,10 @@
             <div class="mdl-card__media">
               <img src="./img/projekte/kolping-dietfurt.png" alt="Kolping Dietfurt" border="0">
             </div>
-            <div class="mdl-card__title mdl-card--expand">
+            <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">kolping-dietfurt.de</h2>
             </div>
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text mdl-card--expand">
               Die Kolpingfamilie Dietfurt erhielt eine neue Homepage mit modernem Design und vielen Funktionen.
             </div>
             <div class="mdl-card__actions mdl-card--border">
@@ -138,10 +153,10 @@
             <div class="mdl-card__media">
               <img src="./img/projekte/libadi.png" alt="Libadi" border="0">
             </div>
-            <div class="mdl-card__title mdl-card--expand">
+            <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">libadi.de</h2>
             </div>
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text mdl-card--expand">
               Ein großer Onlineshop für Hygieneartikel auf Basis von Drupal Commerce. Mit Produkt-Konfigurator und Spezialentwicklungen.
             </div>
             <div class="mdl-card__actions mdl-card--border">
@@ -153,10 +168,10 @@
             <div class="mdl-card__media">
               <img src="./img/projekte/soundboard.png" alt="Soundboard" border="0">
             </div>
-            <div class="mdl-card__title mdl-card--expand">
+            <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">Soundboard</h2>
             </div>
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text mdl-card--expand">
               Eine Soundboard-App mit Material Design und Echtzeit-Synchronisierung.
             </div>
             <div class="mdl-card__actions mdl-card--border">
@@ -168,10 +183,10 @@
             <div class="mdl-card__media">
               <img src="./img/projekte/allapiazza.png" alt="Pizzeria Alla Piazza" border="0">
             </div>
-            <div class="mdl-card__title mdl-card--expand">
+            <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">pizzeria-alla-piazza.de</h2>
             </div>
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text mdl-card--expand">
               Die Website der Pizzeria alla Piazza in Beilngries wurde mit dem CMS Drupal umgesetzt.
             </div>
             <div class="mdl-card__actions mdl-card--border">
