--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <h2 class="mdl-card__title-text">praxis-hradetzky.de</h2>
             </div>
             <div class="mdl-card__supporting-text mdl-card--expand">
-              Website der Zahnarztpraxis Dres. Hradetzky
+              Website der Zahnarztpraxis Dres. Hradetzky.
             </div>
             <div class="mdl-card__actions mdl-card--border">
               <a href="https://www.praxis-hradetzky.de/" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur Website</a>
