--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
 
           <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
-              <img src="./img/projekte/kolping-dietfurt.png" alt="Kolping Dietfurt" border="0">
+              <img src="./img/projekte/xamfy.png" alt="Xamfy" border="0">
             </div>
             <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">kolping-dietfurt.de</h2>
+              <h2 class="mdl-card__title-text">xamfy.de</h2>
             </div>
             <div class="mdl-card__supporting-text mdl-card--expand">
-              Die Kolpingfamilie Dietfurt erhielt eine neue Homepage mit modernem Design und vielen Funktionen.
+              Website eines Let's Play Kanals. Synchronisierung mit Youtube, schnelle Datenpflege, Filterfunktionen, offene API.
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a href="https://kolping-dietfurt.de" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur Website</a>
+              <a href="https://xamfy.de" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur Website</a>
             </div>
           </div>
 
