--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <li><strong>Wohnort:</strong> Germany -> Bavaria -> Dietfurt</li>
               <li><strong>Ausbildung:</strong> Fachinformatiker - Anwendungsentwicklung</li>
               <li><strong>Beruf:</strong> Web-Entwickler</li>
-              <li><strong>Arbeit:</strong> Drupal-Entwicklung bei der Grasenhiller GmbH in Neumarkt</li>
+              <li><strong>Arbeit:</strong> Drupal-Entwicklung bei der zeigewas GmbH in Amberg</li>
               <li><strong>Kontakt:</strong> <a href="mailto:max.bachhuber@bahuma.io" class="mdl-color-text--primary">max.bachhuber@bahuma.io</a> oder <a href="tel:00491754224666" class="mdl-color-text--primary">0175 / 422 4666</a></li>
             </ul>
           </div>
