--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
           </div>
 
-          <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
+          <!--<div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
               <img src="./img/projekte/zoomout.png" alt="Zoomout" border="0">
             </div>
@@ -147,7 +147,7 @@
             <div class="mdl-card__actions mdl-card--border">
               <a href="http://zoomout-official.com" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur Website</a>
             </div>
-          </div>
+          </div>-->
 
           <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
@@ -230,7 +230,7 @@
           <h5>Angaben gem&auml;&szlig; &sect; 5 TMG:</h5>
           <p>Maximilian Bachhuber<br />
             Bahuma<br />
-            Mallerstetter Stra&szlig;e 6<br />
+            Hauptstra&szlig;e 12<br />
             92345 Dietfurt </p>
 
           <h5>Kontakt:</h5>
