--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
           <div class="mdl-cell mdl-cell--6-col">
             <ul>
               <li><strong>Name:</strong> Max Bachhuber</li>
-              <li><strong>Alter:</strong> 20 Jahre (1996-08-20)</li>
+              <li><strong>Alter:</strong> 22 Jahre (1996-08-20)</li>
               <li><strong>Wohnort:</strong> Germany -> Bavaria -> Dietfurt</li>
               <li><strong>Ausbildung:</strong> Fachinformatiker - Anwendungsentwicklung</li>
-              <li><strong>Beruf:</strong> Web-Entwickler</li>
-              <li><strong>Arbeit:</strong> Drupal-Entwicklung bei der zeigewas GmbH in Amberg</li>
+              <li><strong>Arbeit:</strong> Software Engineer bei der bewegewas GmbH in Amberg</li>
               <li><strong>Kontakt:</strong> <a href="mailto:max.bachhuber@bahuma.io" class="mdl-color-text--primary">max.bachhuber@bahuma.io</a> oder <a href="tel:00491754224666" class="mdl-color-text--primary">0175 / 422 4666</a></li>
             </ul>
           </div>
