--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
         <div class="referenzen-container mdl-grid">
           <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
+              <img src="./img/projekte/halbwissenbot.png" alt="Halbwissenbot" border="0">
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">github.com/bahuma/halbwissenbot</h2>
+            </div>
+            <div class="mdl-card__supporting-text mdl-card--expand">
+              Ein Chatbot für den Messenger Telegram, der speziell auf eine bestimmte Telegram-Gruppe zugeschnitten ist und dort für allgemeine Erheiterung sorgt.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a href="https://github.com/bahuma/halbwissenbot/" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zum Bot</a>
+            </div>
+          </div>
+          
+          <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
+            <div class="mdl-card__media">
               <img src="./img/projekte/rocketpush.png" alt="Rocketpush" border="0">
             </div>
             <div class="mdl-card__title">
