--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <img src="./img/projekte/halbwissenbot.png" alt="Halbwissenbot" border="0">
             </div>
             <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">github.com/bahuma/halbwissenbot</h2>
+              <h2 class="mdl-card__title-text">Halbwissenbot</h2>
             </div>
             <div class="mdl-card__supporting-text mdl-card--expand">
               Ein Chatbot für den Messenger Telegram, der speziell auf eine bestimmte Telegram-Gruppe zugeschnitten ist und dort für allgemeine Erheiterung sorgt.
