--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="kompetenzen">
       <div class="container mdl-grid">
         <div class="mdl-cell mdl-cell--4-col">
-          <img class="portrait" src="img/ich.png">
+          <img class="portrait" src="img/ich.jpg">
         </div>
         <div class="intro-text mdl-cell mdl-cell--8-col">
           <h1>Max Bachhuber</h1>
