--- a/index.html
+++ b/index.html
@@ -18,6 +18,58 @@
     <script src="./bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
     <link rel="import" href="./bower_components/google-sheets/google-sheets.html">
+    
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org/",
+      "@type": "Person",
+      "name": "Max Bachhuber",
+      "additionalName": "Michael",
+      "address": {
+        "@context": "http://schema.org/",
+        "@type": "PostalAddress",
+        "addressLocality": "Dietfurt",
+          "addressRegion": "Bayern",
+          "postalCode": "92345",
+          "streetAddress": "Hauptstraße 12",
+        "addressCountry": "DE"
+      },
+      "memberOf": {
+        "@context": "http://schema.org/",
+        "@type": "Organization",
+        "name": "bewegewas GmbH",
+        "url": "https://bewegewas.com"
+      },
+      "jobTitle": "Senior Developer",
+      "telephone": "(49) 175-4224666",
+      "email": "max.bachhuber@bahuma.io",
+      "familyName": "Bachhuber",
+      "givenName": "Max",
+      "gender": {
+        "@context": "http://schema.org",
+        "@type": "Male"
+      },
+      "url": "https://bahuma.io",
+      "birthDate": "1996-08-20",
+      "brand": {
+        "@context": "http://schema.org",
+        "@type": "Brand",
+        "name": "Bahuma",
+        "url": "https://bahuma.io",
+        "logo": "https://bahuma.io/img/logo.svg",
+        "slogan":"It's just a part"
+      },
+      "height": "190 cm",
+      "knowsLanguage": [
+
+          "DE",
+          "EN"
+
+      ],
+      "nationality": "Germany",
+      "image": "https://bahuma.io/img/ich.jpg"
+    }
+    </script>
   </head>
   <body>
     <header id="page-header" class="mdl-color--primary">
@@ -86,7 +138,7 @@
               <li><strong>Alter:</strong> 23 Jahre (1996-08-20)</li>
               <li><strong>Wohnort:</strong> Germany -> Bavaria -> Dietfurt</li>
               <li><strong>Ausbildung:</strong> Fachinformatiker - Anwendungsentwicklung</li>
-              <li><strong>Arbeit:</strong> Software Engineer bei der bewegewas GmbH in Amberg</li>
+              <li><strong>Arbeit:</strong> Senior Developer bei der bewegewas GmbH in Amberg</li>
               <li><strong>Kontakt:</strong> <a href="mailto:max.bachhuber@bahuma.io" class="mdl-color-text--primary">max.bachhuber@bahuma.io</a> oder <a href="tel:00491754224666" class="mdl-color-text--primary">0175 / 422 4666</a></li>
             </ul>
           </div>
