--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <ul>
                 <li class="big"><img src="img/icons/angularjs.png">AngularJS (1 und 2)</li>
                 <li class="big"><img src="img/icons/polymer.png">Polymer</li>
-                <li class="big last"><img src="img/icons/drupal.png">Drupal (7, 8 & 9)</li>
+                <li class="big last"><img src="img/icons/drupal.png">Drupal (7, 8 und 9)</li>
                 <li><img src="img/icons/nodejs.png">NodeJS</li>
                 <li><img src="img/icons/react.png">ReactJS</li>
                 <li><img src="img/icons/mongodb.png">MongoDB</li>
