--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       "address": {
         "@context": "http://schema.org/",
         "@type": "PostalAddress",
-        "addressLocality": "Dietfurt",
+          "addressLocality": "Breitenbrunn",
           "addressRegion": "Bayern",
-          "postalCode": "92345",
-          "streetAddress": "Hauptstraße 12",
+          "postalCode": "92363",
+          "streetAddress": "Dietfurter Weg 4",
         "addressCountry": "DE"
       },
       "memberOf": {
@@ -136,7 +136,7 @@
             <ul>
               <li><strong>Name:</strong> Max Bachhuber</li>
               <li><strong>Alter:</strong> 24 Jahre (1996-08-20)</li>
-              <li><strong>Wohnort:</strong> Germany -> Bavaria -> Dietfurt</li>
+              <li><strong>Wohnort:</strong> Germany -> Bavaria -> Breitenbrunn</li>
               <li><strong>Ausbildung:</strong> Fachinformatiker - Anwendungsentwicklung</li>
               <li><strong>Arbeit:</strong> Senior Developer bei der bewegewas GmbH in Amberg</li>
               <li><strong>Kontakt:</strong> <a href="mailto:max.bachhuber@bahuma.io" class="mdl-color-text--primary">max.bachhuber@bahuma.io</a> oder <a href="tel:00491754224666" class="mdl-color-text--primary">0175 / 422 4666</a></li>
