Update Info to Conrad

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       "memberOf": {
         "@context": "http://schema.org/",
         "@type": "Organization",
-        "name": "bewegewas GmbH",
-        "url": "https://bewegewas.com"
+        "name": "Conrad Electronic SE",
+        "url": "https://conrad.de"
       },
-      "jobTitle": "Senior Developer",
+      "jobTitle": "Senior Expert Platform Development",
       "telephone": "(49) 175-4224666",
       "email": "max.bachhuber@bahuma.io",
       "familyName": "Bachhuber",
@@ -136,9 +136,9 @@
             <ul>
               <li><strong>Name:</strong> Max Bachhuber</li>
               <li><strong>Alter:</strong> 24 Jahre (1996-08-20)</li>
-              <li><strong>Wohnort:</strong> Germany -> Bavaria -> Breitenbrunn</li>
+              <li><strong>Wohnort:</strong> Dürn - Breitenbrunn (Opf.)</li>
               <li><strong>Ausbildung:</strong> Fachinformatiker - Anwendungsentwicklung</li>
-              <li><strong>Arbeit:</strong> Senior Developer bei der bewegewas GmbH in Amberg</li>
+              <li><strong>Arbeit:</strong> Senior Expert Platform Development bei Conrad Electronic SE in Amberg</li>
               <li><strong>Kontakt:</strong> <a href="mailto:max.bachhuber@bahuma.io" class="mdl-color-text--primary">max.bachhuber@bahuma.io</a> oder <a href="tel:00491754224666" class="mdl-color-text--primary">0175 / 422 4666</a></li>
             </ul>
           </div>
@@ -151,7 +151,7 @@
 
 
 
-    <section id="projekte"  class="colored mdl-color--accent">
+   <!-- <section id="projekte"  class="colored mdl-color--accent">
       <div class="container">
         <h4 style="">Aktuelle Projekte</h4>
         <div class="referenzen-container mdl-grid">
@@ -198,7 +198,7 @@
             <div class="mdl-card__actions mdl-card--border">
               <a href="https://www.praxis-hradetzky.de/" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank">Zur Website</a>
             </div>
-          </div>
+          </div>-->
 
           <!--<div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
@@ -215,7 +215,7 @@
             </div>
           </div>-->
 
-          <div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
+          <!--<div class="mdl-card mdl-shadow--3dp mdl-cell mdl-cell--4-col">
             <div class="mdl-card__media">
               <img src="./img/projekte/xamfy.png" alt="Xamfy" border="0">
             </div>
@@ -276,7 +276,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section id="profile">
       <div class="container">
@@ -296,12 +296,11 @@
           <h5>Angaben gem&auml;&szlig; &sect; 5 TMG:</h5>
           <p>Maximilian Bachhuber<br />
             Bahuma<br />
-            Hauptstra&szlig;e 12<br />
-            92345 Dietfurt </p>
+            Dietfurter Weg 4<br />
+            92363 Breitenbrunn</p>
 
           <h5>Kontakt:</h5>
           <p>Telefon: 0175 4224666<br>
-          Telefax: 08464 6029824<br>
           E-Mail: info@bahuma.io</p>
 
           <h5>Haftungsausschluss (Disclaimer)</h5>
